# hana-hdbext-promisfied-example

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  REUSE.toml  index.cjs  index.js  npm-shrinkwrap.json  package-lock.json  package.json  test.cjs  test.js  tsconfig.json
.claude/: settings.json
.claude/agents/: parity-reviewer.md
.claude/hooks/: block-env-edits.js  esm-cjs-drift-check.js  remind-types-regen.js
.claude/skills/doc-sync/: SKILL.md
.claude/skills/parity-sync/: SKILL.md
.claude/skills/release-check/: SKILL.md
.claude/skills/update-deps/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md
.github/agents/: parity-maintainer.agent.md
.github/instructions/: package-test-commands.instructions.md  type-sync.instructions.md
.github/prompts/: add-parity-method.prompt.md  release-checklist.prompt.md
.github/workflows/: ci.yml  release-go.yml  release-node.yml  release-python.yml
.reuse/: dep5
@types/: index.d.ts
LICENSES/: Apache-2.0.txt
docs/superpowers/plans/: 2026-04-22-hdbhelper-py.md  2026-04-23-update-deps-automation.md
docs/superpowers/specs/: 2026-04-22-hdbhelper-py-design.md  2026-04-23-update-deps-automation-design.md
hdb/: .gitignore  README.md  fixup  index.cjs  index.js  npm-shrinkwrap.json  package.json  test.cjs  test.js  tsconfig-base.json  tsconfig-cjs.json  tsconfig.json
hdb/@types/: index.d.cts  index.d.ts  test.d.ts
hdb/@types/tests/: hdb.Test.d.ts
hdb/src/: test.js
hdb/tests/: hdb.Test.js
hdbext/: README.md  index.cjs  index.js  npm-shrinkwrap.json  package-lock.json  package.json  shims.d.ts  test.cjs  test.js  tsconfig.json
hdbext/@types/: index.d.cts  index.d.ts  test.d.ts
hdbext/@types/tests/: hdbext.Test.d.ts
hdbext/tests/: hdbext.Test.js
hdbhelper/: README.md  doc.go  env.go  example_test.go  go.mod  go.sum  hdbhelper.go  hdbhelper_test.go  procedure.go
hdbhelper-py/: .gitignore  README.md  async_hdbhelper.py  hdbhelper.py  pyproject.toml
hdbhelper-py/tests/: test_hdbhelper.py
scripts/: update-deps.sh
