[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-hdbhelper-py"
version = "0.1.0"
description = "Python helper for SAP HANA — wraps hdbcli with environment resolution, SQL execution, and stored procedure support"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "hdbcli",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = ["hdbhelper", "async_hdbhelper"]
