[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-hdbhelper-py"
version = "0.1.0"
description = "Python helper for SAP HANA — wraps hdbcli with environment resolution, SQL execution, and stored procedure support"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Thomas Jung", email = "thomas.jung@sap.com" },
]
keywords = ["sap", "hana", "hdbcli", "database", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "hdbcli",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/SAP-samples/hana-hdbext-promisfied-example"
Repository = "https://github.com/SAP-samples/hana-hdbext-promisfied-example"
Documentation = "https://github.com/SAP-samples/hana-hdbext-promisfied-example/tree/main/hdbhelper-py#readme"
Issues = "https://github.com/SAP-samples/hana-hdbext-promisfied-example/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = ["hdbhelper", "async_hdbhelper"]
